security begin