@@ -7,6 +7,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,17 +16,11 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Разрешаем запросы со всех источников (в реальном приложении лучше указывать конкретные домены)
-        config.setAllowedOrigins(Arrays.asList("*"));
-        
-        // Разрешаем все HTTP методы
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        
-        // Разрешаем все заголовки
-        config.setAllowedHeaders(Arrays.asList("*"));
-        
-        // Устанавливаем время кэширования CORS конфигурации (в секундах)
+
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowCredentials(true);
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setMaxAge(3600L);
         
         source.registerCorsConfiguration("/**", config);
